@@ -31,11 +31,13 @@ sub run {
         );
     }
     if (scalar @remove) {
+        my @ips;
         c(@remove)->each(
             sub {
                 my ($e, $num) = @_;
                 my $u = get_short($c, $e);
                 if ($u) {
+                    push @ips, $u->created_by if $u->created_by;
                     print_infos($u->to_hash);
                     my $confirm = ($yes) ? 'yes' : undef;
                     unless (defined $confirm) {
@@ -55,28 +57,35 @@ sub run {
                 }
             }
         );
+        say sprintf("If you want to ban the uploaders' IPs, please do:\n  carton exec script/lstu ban --ban %s", join(' ', @ips)) if @ips;
     }
     if ($search) {
         my $u = Lstu::DB::URL->new(app => $c->app)->search_url($search);
         my @shorts;
+        my @ips;
         $u->each(sub {
             my ($e, $num) = @_;
             push @shorts, $e->{short};
+            push @ips, $e->{created_by} if $e->{created_by};
             print_infos($e);
         });
         say sprintf('%d matching URLs', $u->size);
         say sprintf("If you want to delete those URLs, please do:\n  carton exec script/lstu url --remove %s", join(' ', @shorts)) if @shorts;
+        say sprintf("If you want to ban those IPs, please do:\n  carton exec script/lstu ban --ban %s", join(' ', @ips)) if @ips;
     }
     if ($ip) {
         my $u = Lstu::DB::URL->new(app => $c->app)->search_creator($ip);
         my @shorts;
+        my @ips;
         $u->each(sub {
             my ($e, $num) = @_;
             push @shorts, $e->{short};
+            push @ips, $e->{created_by} if $e->{created_by};
             print_infos($e);
         });
         say sprintf('%d matching URLs', $u->size);
         say sprintf("If you want to delete those URLs, please do:\n  carton exec script/lstu url --remove %s", join(' ', @shorts)) if @shorts;
+        say sprintf("If you want to ban those IPs, please do:\n  carton exec script/lstu ban --ban %s", join(' ', @ips)) if @ips;
     }
 }
 
@@ -85,7 +94,7 @@ sub get_short {
     my $short = shift;
 
     my $u = Lstu::DB::URL->new(app => $c->app, short => $short);
-    if ($u->url) {
+    if ($u->url && !$u->disabled) {
         return $u;
     } else {
         say sprintf('Sorry, unable to find an URL with short = %s', $short);
